# BLP-Base-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  comparison.py  datasets.py  injecagent_runner.py
clearance/: __init__.py  analyzer.py  audit.py  checker.py  declassifier.py  label_store.py  llm_analyzer.py  models.py
demo/: index.html  streamlit_app.py
docs/: architecture.md  blp-model.md  components.md  extending.md  index.md  integrations.md
examples/: __init__.py  ceo_assistant.py  simple_check.py
integrations/: __init__.py
integrations/email/: __init__.py  gateway.py
integrations/slack/: __init__.py  bot.py
tests/: __init__.py  test_analyzer.py  test_audit.py  test_benchmark.py  test_checker.py  test_declassifier.py  test_email_integration.py  test_injecagent_benchmark.py  test_label_store.py  test_models.py  test_slack_integration.py  test_verification.py
