[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearance"
version = "0.1.0"
description = "Bell-LaPadula model-based information flow control for AI agent communications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Clearance Contributors"}
]
keywords = ["security", "blp", "bell-lapadula", "ai-agents", "information-flow-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
slack = [
    "slack-sdk>=3.0",
]

[project.urls]
Homepage = "https://github.com/clearance-project/clearance"
Repository = "https://github.com/clearance-project/clearance"

[tool.setuptools.packages.find]
where = ["."]
include = ["clearance*", "integrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
