[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearance"
version = "0.1.0"
description = "Stop your AI agents from leaking secrets. Information flow control for multi-agent systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Clearance Contributors"}
]
keywords = [
    "llm-security",
    "ai-agents",
    "multi-agent",
    "prompt-injection",
    "information-flow-control",
    "bell-lapadula",
    "agent-security",
    "langchain",
    "crewai",
    "autogen",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
slack = [
    "slack-sdk>=3.0",
]
demo = [
    "streamlit>=1.28",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/clearance-project/clearance"
Repository = "https://github.com/clearance-project/clearance"

[tool.setuptools.packages.find]
where = ["."]
include = ["clearance*", "integrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
